# executor

./: .gitignore  README.md  flake.nix  pyproject.toml
example/: executor.yml
executor/: __main__.py  cfg.py  execenv.py  executor.py
