[tool.poetry]
name="executor"
version="0.0.3"
description="Terminal manager"
authors=["Neg <serg.zorg@gmail.com>"]
license="LGPL-3.0 License"
readme=['README.md']
homepage="https://github.com/neg-serg/executor"
repository="https://github.com/neg-serg/executor"
packages=[
    {include='executor/__main__.py'},
    {include='executor/*.py'},
]

[tool.poetry.dependencies]
i3ipc='*'
inotify='*'
python='^3.11'
ruamel-yaml='*'
systemd='*'

[tool.poetry.dev-dependencies]

[build-system]
requires=["poetry-core>=1.0.0"]
build-backend="poetry.core.masonry.api"
